[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proxy-raek-se"
version = "0.0.1"
authors = [
    {name="Rasmus Bondesson", email="raek@raek.se"},
]
description = "Small web to HTTP proxy"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask",
    "gunicorn",
    "gemurl>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/raek/proxy.raek.se/"

[project.scripts]
proxy_raek_se = "proxy_raek_se.main:main"
gemfetch = "proxy_raek_se.client:main"
